# DiscordGymBotTest

./: .breakpoints  README.md  conversions.py  keep_alive.py  main.py  parse_PRlist_txt.py  parse_gym_txt.py  pyproject.toml
database/: conversions.txt  heathlist.txt  help_commands.txt  pr_list (copy).txt  pr_list.txt
functions/: conversions.py  healthcalc.py  keep_alive.py  leaderboard.py  parse_PRlist_txt.py  parse_healthlist_txt.py  verticalcalc.py
